# web-task-13

web-task-13-django/: pyproject.toml
web-task-13-django/task_10/: manage.py
web-task-13-django/task_10/quotes/: forms.py  models.py  urls.py  utils.py  views.py
web-task-13-django/task_10/quotes/migrations/: 0001_initial.py  0002_alter_tag_name.py
web-task-13-django/task_10/quotes/static/quotes/: style.css
web-task-13-django/task_10/quotes/templates/quotes/: add_author.html  add_quote.html  author.html  base.html  index.html
web-task-13-django/task_10/quotes/templatetags/: find_author.py  find_tags.py
web-task-13-django/task_10/task_10/: asgi.py  settings.py  urls.py  wsgi.py
web-task-13-django/task_10/users/: views.py
web-task-13-django/task_10/users/templates/users/: login.html  password_reset_email.html
web-task-13-django/task_10/utils/: migration.py  quotes_into_mongo.py
web-task-13-fastapi/: main.py  pyproject.toml
web-task-13-fastapi/src/repository/: contacts.py
web-task-13-fastapi/src/routes/: auth.py  contacts.py
web-task-13-fastapi/src/services/: auth.py  email.py
