[tool.poetry]
name = "web-task-10-django"
version = "0.1.0"
description = ""
authors = ["Vladyslav Chaban <dma.employee.v@gmail.com>"]
readme = "README.md"
packages = [{include = "web_task_10_django"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2"
bson = "^0.5.10"
pymongo = {extras = ["srv"], version = "^4.3.3"}
psycopg2-binary = "^2.9.6"
django-environ = "^0.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
